fixed html files

--- a/PMS/UI/homepage-admin.html
+++ b/PMS/UI/homepage-admin.html
@@ -4,8 +4,8 @@
 <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="css/bootstrap.min.css">
-    <link rel="stylesheet" href="homepage.css">
-    <link rel="stylesheet" href="homepage-admin.css">
+    <link rel="stylesheet" href="css/homepage.css">
+    <link rel="stylesheet" href="css/homepage-admin.css">
 <title> LNNCHS Payment Monitoring System Admin | Homepage</title>
 </head>
 <body>
@@ -70,7 +70,7 @@
     <a href="#section2">
         <div class="scroll-down bounceInDown animated">
             <span>
-                <i class="fa fa-angle-down fa-2x"><img class="down-btn" src="down.png"></img></i>
+                <i class="fa fa-angle-down fa-2x"><img class="down-btn" src="static/down.png"></img></i>
             </span>
         </div>
         </a>
@@ -124,6 +124,6 @@
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
     <script src="js/bootstrap.js"></script>
-    <script src="homepage-admin.js"></script>
+    <script src="js/homepage-admin.js"></script>
 </body>
 </html>
