--- a/PMS/UI/Login_Page.html
+++ b/PMS/UI/Login_Page.html
@@ -4,9 +4,9 @@
 <meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" href="css/bootstrap.min.css">
-	<link rel="stylesheet" href="style.css">
-	<link rel ="stylesheet" href="style-widgets.css">
-	<link rel ="stylesheet" href="loginpage.css">
+	<link rel="stylesheet" href="css/style.css">
+	<link rel ="stylesheet" href="css/style-widgets.css">
+	<link rel ="stylesheet" href="css/loginpage.css">
 	<link href='http://fonts.googleapis.com/css?family=Varela+Round' rel='stylesheet' type='text/css'>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-validate/1.13.1/jquery.validate.min.js"></script>
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
@@ -101,6 +101,6 @@
 
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
 	<script src="js/bootstrap.js"></script>
-	<script src="loginpage.js"></script>
+	<script src="js/loginpage.js"></script>
 </body>
 </html>
