--- a/PMS/UI/students.html
+++ b/PMS/UI/students.html
@@ -11,12 +11,12 @@
     <link rel="stylesheet" href="css/metrobuttons.css">
     <link rel="stylesheet" href="css/students.css"> 
     <link rel="stylesheet" href="css/addstudents.css"> 
-    <link rel="stylesheet" type="text/css" href="css/metro-bootstrap.min.css">
+    <link rel="stylesheet" type="text/css" href="css/metro-bootstrap.css">
     <link rel="stylesheet" href="css/font-awesome.min.css">
     <link rel="stylesheet" type="text/css" href="css/docs.css">
     <script src="js/modernizr.js"></script> <!-- Modernizr -->
     
-    <title>Responsive Sidebar Navigation | CodyHouse</title>
+    <title>Students</title>
 </head>
 <body>
     <header class="cd-main-header">
@@ -90,7 +90,6 @@
 </div>
 </div>
 <script class="cssdeck" src="//cdnjs.cloudflare.com/ajax/libs/jquery/1.8.0/jquery.min.js"></script>
-</div>
 <script src="js/jquery-2.1.4.js"></script>
 <script src="js/jquery.menu-aim.js"></script>
 <script src="js/main.js"></script> <!-- Resource jQuery -->
