--- a/PMS/UI/viewallstudents.html
+++ b/PMS/UI/viewallstudents.html
@@ -11,13 +11,13 @@
     <link rel="stylesheet" href="css/metrobuttons.css">
     <link rel="stylesheet" href="css/students.css"> 
     <link rel="stylesheet" href="css/viewallstudent.css"> 
-    <link rel="stylesheet" type="text/css" href="css/metro-bootstrap.min.css">
+ <link rel="stylesheet" type="text/css" href="css/metro-bootstrap.css">
     <link rel="stylesheet" href="css/font-awesome.min.css">
     <link rel="stylesheet" type="text/css" href="css/docs.css">
     
     <script src="js/modernizr.js"></script> <!-- Modernizr -->
     
-    <title>Responsive Sidebar Navigation | CodyHouse</title>
+    <title>View Students</title>
 </head>
 <body>
     <header class="cd-main-header">
@@ -102,7 +102,8 @@
                             <td>123.00</td>
                             <td>0.00</td>
                             <td>
-                                <button class="button primary">Edit</button></th>
+                                <a href="editstudent.html"><button class="button primary">Edit</button></a>
+                                <a href="viewstudent.html"><button class="button primary">View</button></a>
                             </td>
                         </tr>
                         <tr>
@@ -113,7 +114,8 @@
                             <td>50.00</td>
                             <td>76.00</td>
                             <td>
-                                <button class="button primary">Edit</button></th>
+                                <a href="editstudent.html"><button class="button primary">Edit</button></a>
+                                <a href="viewstudent.html"><button class="button primary">View</button></a>
                             </td>
                         </tr>
                         <tr>
@@ -124,7 +126,8 @@
                             <td>50.00</td>
                             <td>76.00</td>
                             <td>
-                                <button class="button primary">Edit</button></th>
+                                <a href="editstudent.html"><button class="button primary">Edit</button></a>
+                                <a href="viewstudent.html"><button class="button primary">View</button></a>
                             </td>
                         </tr>
                         <tr>
@@ -135,7 +138,8 @@
                             <td>50.00</td>
                             <td>76.00</td>
                             <td>
-                                <button class="button primary">Edit</button></th>
+                                <a href="editstudent.html"><button class="button primary">Edit</button></a>
+                                <a href="viewstudent.html"><button class="button primary">View</button></a>
                             </td>
                         </tr>
                         <tr>
@@ -146,7 +150,8 @@
                             <td>50.00</td>
                             <td>76.00</td>
                             <td>
-                                <button class="button primary">Edit</button></th>
+                                <a href="editstudent.html"><button class="button primary">Edit</button></a>
+                                <a href="viewstudent.html"><button class="button primary">View</button></a>
                             </td>
                         </tr>
                     </tbody>
