--- a/PMS/UI/homepage.html
+++ b/PMS/UI/homepage.html
@@ -283,6 +283,7 @@
         </div>
     </div>
 </div>
+</section>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
     <script src="js/bootstrap.js"></script>
     <script src="js/homepage.js"></script>
