updated templates except views

--- a/PMS/UI/homepageadmin.html
+++ b/PMS/UI/homepageadmin.html
@@ -35,6 +35,7 @@
                   <ul class="dropdown-menu">
                     <li><a href="addfunds.html">Add Fund</a></li>
                     <li><a href="viewallfunds.html">View / Edit Fund</a></li>
+                    <li><a href="addpayment.html">Add Payment</a></li>
                   </ul>
                 </li>
                 <li class="dropdown"><a href="#" class="dropdown-toggle" data-toggle="dropdown">Project <b class="caret"></b></a>
@@ -97,7 +98,13 @@
       <a href="viewallproject.html"><div class="tile red">
         <h3 class="title">View / Edit Project</h3>
       </div></a>
-    </div>     
+    </div>  
+
+    <div class="col-sm-4">
+      <a href="addpayment.html"><div class="tile red">
+        <h3 class="title">Add Payment</h3>
+      </div></a>
+    </div>   
   </div>
 
        <div class="row">
