--- a/PMS/UI/addpayment.html
+++ b/PMS/UI/addpayment.html
@@ -12,7 +12,7 @@
     <link href="http://netdna.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.css" rel="stylesheet">
 
 
-    <title>Edit Project</title>
+    <title>Add Payment</title>
 </head>
 <body>
    <nav class="navbar navbar-trans navbar-fixed-top" role="navigation">
@@ -65,7 +65,7 @@
 
 <div class="container">
   <div class="row">
-    <h2 class="student-name text-center">EDIT PROJECT</h2>
+    <h2 class="student-name text-center">ADD STUDENT PAYMENT</h2>
   </div>
     
   <div class="image-container set-full-height">
@@ -85,13 +85,13 @@
                         <div class="wizard-header">
                             <h3>
                                 <br>
-                               <b>PROJECT</b> PROFILE <br>
+                               <b>PAYMENT</b> DETAILS <br>
                                <small>This information will be kept confidential.</small>
                                <br><br>
                             </h3>
                         </div>
                         <ul>
-                            <li><a href="#about" data-toggle="tab">Account</a></li>
+                            <li><a href="#about" data-toggle="tab">Payment</a></li>
                             <li><a href="#submission" data-toggle="tab">Submit</a></li>
                         </ul>
                         
@@ -101,11 +101,15 @@
                                   <h4 class="info-text"> Type in legitimate information.</h4>
                                   <div class="col-sm-10 col-sm-offset-1">
                                       <div class="form-group">
-                                        <label>Fund Name <small>(required)</small></label>
-                                        <input name="fundname" type="text" class="form-control required" placeholder="Library Fee">
+                                            <label>Student ID</label><br>
+                                             <select name="country" class="form-control">
+                                                <option value="student"> 201211234 </option>
+                                                <option value="student"> 201012345 </option>
+                                                <option value="student"> 201512345 </option>
+                                            </select>
                                       </div>
                                       <div class="form-group">
-                                        <label>Cost <small>(required)</small></label>
+                                        <label>Amount <small>(required)</small></label>
                                         <input name="cost" type="text" class="form-control required" placeholder="500">
                                       </div>    
                               </div>
