--- a/PMS/UI/addproject.html
+++ b/PMS/UI/addproject.html
@@ -38,6 +38,7 @@
                   <ul class="dropdown-menu">
                     <li><a href="addfunds.html">Add Fund</a></li>
                     <li><a href="viewallfunds.html">View / Edit Fund</a></li>
+                    <li><a href="addpayment.html">Add Payment</a></li>
                   </ul>
                 </li>
                 <li class="dropdown"><a href="#" class="dropdown-toggle" data-toggle="dropdown">Project <b class="caret"></b></a>
@@ -100,7 +101,7 @@
                                   <h4 class="info-text"> Type in legitimate information.</h4>
                                   <div class="col-sm-10 col-sm-offset-1">
                                       <div class="form-group">
-                                        <label>Fund Name <small>(required)</small></label>
+                                        <label>Project Name <small>(required)</small></label>
                                         <input name="fundname" type="text" class="form-control required" placeholder="Library Fee">
                                       </div>
                                       <div class="form-group">
