--- a/PMS/UI/editstudent.html
+++ b/PMS/UI/editstudent.html
@@ -32,6 +32,7 @@
                   <ul class="dropdown-menu">
                     <li><a href="addstudents.html">Add Student</a></li>
                     <li><a href="viewallstudents.html">View / Edit Student</a></li>
+                    <li><a href="addpayment.html">Add Payment</a></li>
                   </ul>
                 </li>
                 <li class="dropdown"><a href="#" class="dropdown-toggle" data-toggle="dropdown">Funds <b class="caret"></b></a>
