--- a/PMS/UI/studenthomepage.html
+++ b/PMS/UI/studenthomepage.html
@@ -101,10 +101,10 @@
             <div class="modal-body row">
                 <form class="col-md-10 col-md-offset-1 col-xs-12 col-xs-offset-0" method="post" id="passwordForm">
                     <div class="form-group">
-                          <input type="password" class="input-lg form-control" name="password1" id="password1" placeholder="New Password" autocomplete="off">
+                          <input type="password" class="input-lg form-control" name="password1" id="password1" placeholder="New Password" autocomplete="off" value="" required >
                     </div>
                     <div class="form-group">
-                        <input type="password" class="input-lg form-control" name="password2" id="password2" placeholder="Repeat Password" autocomplete="off">
+                        <input type="password" class="input-lg form-control" name="password2" id="password2" placeholder="Repeat Password" autocomplete="off" value="" required >
                         
                     </div>
                     <div class="form-group">
@@ -117,10 +117,25 @@
         </div>
     </div>
 </div>
+<script src="js/jquery.validate.min.js"></script>
  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
     <script src="js/bootstrap.js"></script>
     <script src="js/homepage.js"></script>
     <script src="js/passwordValidator.js"></script>
 <script src="http://code.jquery.com/jquery-2.1.3.min.js"></script> 
+<script>
+  window.onload = function () {
+  var form = document.getElementById('passwordForm');
+  form.button.onclick = function (){
+    for(var i=0; i < form.elements.length; i++){
+      if(form.elements[i].value === '' && form.elements[i].hasAttribute('required')){
+        alert('There are some required fields!');
+        return false;
+      }
+    }
+    form.submit();
+  }; 
+};
+</script>
 </body>
 </html>
