--- a/PMS/UI/viewproject.html
+++ b/PMS/UI/viewproject.html
@@ -37,6 +37,7 @@
                   <ul class="dropdown-menu">
                     <li><a href="addfunds.html">Add Fund</a></li>
                     <li><a href="viewallfunds.html">View / Edit Fund</a></li>
+                    <li><a href="addpayment.html">Add Payment</a></li>
                   </ul>
                 </li>
                 <li class="dropdown"><a href="#" class="dropdown-toggle" data-toggle="dropdown">Project <b class="caret"></b></a>
