--- a/PMS/UI/viewstudent.html
+++ b/PMS/UI/viewstudent.html
@@ -43,6 +43,7 @@
                   <ul class="dropdown-menu">
                     <li><a href="addproject.html">Add Project</a></li>
                     <li><a href="viewallproject.html">View / Edit Project</a></li>
+                    <li><a href="addpayment.html">Add Payment</a></li>
                   </ul>
                 </li>
             </ul>
